crates/ruff/src/jupyter/snapshots/ruff__jupyter__notebook__tests__import_sorting.snap
---
source: crates/ruff/src/jupyter/notebook.rs
---
isort.ipynb:cell 1:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / from pathlib import Path
2 | | import random
3 | | import math
4 | | from typing import Any
  | |_^ I001
5 |   import collections
6 |   # Newline should be added here
  |
  = help: Organize imports

ℹ Fix
  1 |+import math
  2 |+import random
1 3 | from pathlib import Path
2   |-import random
3   |-import math
4 4 | from typing import Any
5 5 | import collections
6 6 | # Newline should be added here

isort.ipynb:cell 2:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
2 |   import random
3 |   import math
4 | / from typing import Any
5 | | import collections
6 | | # Newline should be added here
  | |_^ I001
7 |   def foo():
8 |       pass
  |
  = help: Organize imports

ℹ Fix
1 1 | from pathlib import Path
2 2 | import random
3 3 | import math
  4 |+import collections
4 5 | from typing import Any
5   |-import collections
  6 |+
  7 |+
6 8 | # Newline should be added here
7 9 | def foo():
8 10 |     pass


